# knowledge-graph-with-rag

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  literature_review.md  pyproject.toml  rdf2KG.py
blog/: package-lock.json  package.json  webpack.config.js
blog/src/: index.ejs  index.js  style.css  util.js
blog/src/diagrams/: diagram.html  index.js  kg_figure.html
blog/static/: references.bib
data/rdf/: healthcare_data.ttl  healthcare_ontology.ttl
data/sec-10-q/: qna_data.csv  qna_data_mini.csv  questions_with_rag_answers.csv  synthetic_qna_data_7_gpt4o.csv  synthetic_qna_data_7_gpt4o_v2_mod1.csv  synthetic_qna_data_7_gpt4o_v2_mod1_100.csv  synthetic_qna_data_7_gpt4o_v2_mod1_50.csv
kg_rag/: __init__.py
kg_rag/configs/: baseline-kgrag.json  entity-based-kgrag.json
kg_rag/evaluation/: hyperparameter_configs.json  hyperparameter_search.py  run_evaluation.py
kg_rag/methods/: __init__.py
kg_rag/methods/baseline_rag/: README.md  __init__.py  document_processor.py  embedder.py  kg_rag.py  vector_store.py
kg_rag/methods/cypher_based/: README.md  __init__.py  cypher_generator.py  graph_constructor.py  kg_rag.py
kg_rag/methods/entity_based/: README.md  __init__.py  embedding_handler.py  kg_rag.py
kg_rag/methods/graphrag_based/: README.md  __init__.py  indexer.py  kg_rag.py  search_strategies.py
kg_rag/utils/: __init__.py  document_loader.py  evaluator.py  graph_transformers.py  graph_utils.py  prompts.py
rdf/: rdf_KG.py  test_sparql.py
scripts/: build_baseline_vectordb.py  build_cypher_graph.py  build_entity_graph.py  build_graphrag.py  build_rdf.py  generate_synthetic_data.py  run.sh  run_baseline_rag.py  run_cypher_rag.py  run_entity_rag.py  run_rdf_to_kg.py
tests/: __init__.py
